# autonomous-driving-data-framework

./: .bandit  .gitignore  .gitleaks.toml  .python-version  .viperlightignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  SECURITY.md  THIRD_PARTY_LICENSES  VERSION  buildspec.yml  cfn-nag-suppress.txt  gen-reports.sh  requirements-dev.txt  requirements.txt  scene-intelligence-with-rosbag-on-aws-delete.template  seedfarmer.yaml  sonar-project.properties
modules/integration/efs-on-eks/: README.md  app.py  deployspec.yaml  modulestack.template  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  stack_efs_eks.py
modules/integration/efs-on-eks/tests/: test_stack.py
modules/integration/emr-to-opensearch/: README.md  app.py  deployspec.yaml  modulestack.template  pyproject.toml  requirements.in  requirements.txt  setup.cfg  stack.py
modules/integration/emr-to-opensearch/lambda/: index.py
modules/integration/emr-to-opensearch/layers/: requirements.txt
modules/service-catalog/: README.md  app.py  deployspec.yaml  modulestack.template  pyproject.toml  requirements.txt  setup.cfg  stack.py
modules/service-catalog/seed_code/mlops_app/: .gitignore  .sagemaker-code-config  README.md  bootstrap.sh  buildspec.yaml  deploy.sh
modules/service-catalog/seed_code/mlops_app/infra/: README.md  app.py  pipeline.py  requirements.txt  source-activate-venv
modules/service-catalog/seed_code/mlops_app/ml/: README.md  run_experimental_pipeline.ipynb  run_stable_pipeline.ipynb  stable_pipeline.py
modules/service-catalog/service_catalog/: products.py
(+1095 files in other folders)
