[metadata]
license_files =
  LICENSE
  NOTICE
  VERSION

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    codeseeder.out,
    bundle

[isort]
profile = black

[mypy]
python_version = 3.8
strict = True
ignore_missing_imports = True
allow_untyped_decorators = True
exclude =
  codeseeder.out/|seed_code/mlops_app/ml/stable_pipeline|seed_code/mlops_app/infra/lambda|seed_code/mlops_app/ml/scripts
warn_unused_ignores = False
