[metadata]
license_files =
  LICENSE
  NOTICE
  VERSION

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    codeseeder.out,
    bundle,
    image_dags,
    tests,

[mypy]
python_version = 3.7
strict = True
ignore_missing_imports = True
allow_untyped_decorators = True
exclude =
  codeseeder.out/|image_dags/|tests/
